--- a/rentals/core/templates/rental_list.html
+++ b/rentals/core/templates/rental_list.html
@@ -2,30 +2,34 @@
 
 {% block content %}
 <div class="flex justify-content-between p-4">
-  <h2>Rental List</h2>
-  <a href="{% url 'core:rental_create' %}" class="btn btn-primary">NOVA RESERVA</a>
+  {% if user.is_authenticated %}
+  <a href="{% url 'core:rental_create' %}" class="btn btn-primary w-full p-1">NOVA RESERVA</a>
+  {% endif %}
 </div>
 
 <table class="table table-striped table-hover">
   <tr>
-    <th>Item</th>
+    <th>Professor</th>
     <th>Data</th>
     <th>Turmo</th>
     <th>Aula</th>
+    <th>Item</th>
     <th>Turma</th>
-    <th>Professor</th>
-    <th>ADMIN</th>
+    <th>***</th>
   </tr>
   {% for rental in rentals %}
   <tr>
-    <td>{{ rental.item.name }}</td>
-    <td>{{ rental.date }}</td>
+    <td>{{ rental.client.username | upper }}</td>
+    <td>{{ rental.date | date:'d/m/Y' }}</td>
     <td>{{ rental.get_period_display }}</td>
     <td>{{ rental.get_period_time_display }}</td>
+    <td>{{ rental.item.name | upper }}</td>
     <td>{{ rental.room }}</td>
-    <td>{{ rental.client.username }}</td>
-    <td><a href="{% url 'core:rental_edit' rental.pk %}"><i class="bi-pencil btn btn-success"></i></a> <a
+    <td>
+      {% if user.is_superuser %}
+      <a href="{% url 'core:rental_edit' rental.pk %}"><i class="bi-pencil btn btn-success"></i></a> <a
         href="{% url 'core:rental_delete' rental.pk %}"><i class="bi-trash btn btn-danger"></i></a></td>
+    {% endif %}
   </tr>
   {% endfor %}
 </table>
