--- a/rentals/core/templates/index.html
+++ b/rentals/core/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Index Page</title>
+  <title>TABAJARA RESERVEITOR</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
