--- a/rentals/core/templates/login.html
+++ b/rentals/core/templates/login.html
@@ -2,18 +2,18 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2>Login</h2>
+    <h2>Acessar o sistema</h2>
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
         <div class="form-group">
-            <label for="username">Username:</label>
+            <label for="username">Login:</label>
             <input type="text" name="username" id="username" class="form-control" required>
         </div>
         <div class="form-group">
-            <label for="password">Password:</label>
+            <label for="password">Senha:</label>
             <input type="password" name="password" id="password" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Login</button>
+        <button type="submit" class="btn btn-primary mt-3">Entrar</button>
     </form>
 </div>
 {% endblock %}
