--- a/rentals/core/templates/rental_list.html
+++ b/rentals/core/templates/rental_list.html
@@ -24,7 +24,7 @@
 </div>
 
 
-<div class="flex justify-content-between p-4">
+<div class="flex justify-content-between my-2">
   {% if user.is_authenticated %}
   <a href="{% url 'core:rental_create' %}" class="btn btn-primary w-full p-2"><i class="bi bi-plus-lg"></i> NOVA RESERVA</a>
   {% endif %}
